--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "serve-json": "json-server --watch db.json --port 4000"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.3.0",
+    "@tanstack/react-query": "^5.60.2",
+    "@tanstack/react-query-devtools": "^5.60.2",
+    "axios": "^1.7.7",
     "json-server": "^1.0.0-beta.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
