--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "serve-json": "json-server --watch db.json --port 4000"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
+    "@mui/icons-material": "^6.1.8",
+    "@mui/material": "^6.1.8",
     "@reduxjs/toolkit": "^2.3.0",
     "@tanstack/react-query": "^5.60.2",
     "@tanstack/react-query-devtools": "^5.60.2",
@@ -18,6 +22,7 @@
     "json-server": "^1.0.0-beta.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0"
   },
   "devDependencies": {
