--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@reduxjs/toolkit": "^2.3.0",
     "@tanstack/react-query": "^5.60.2",
     "@tanstack/react-query-devtools": "^5.60.2",
+    "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "json-server": "^1.0.0-beta.3",
+    "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
@@ -35,6 +37,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
+    "tailwindcss": "^3.4.15",
     "vite": "^5.4.10"
   }
 }
