--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.1.8",
     "@mui/material": "^6.2.0",
+    "@mui/x-charts": "^7.23.2",
     "@reduxjs/toolkit": "^2.3.0",
     "@tanstack/react-query": "^5.60.2",
     "@tanstack/react-query-devtools": "^5.60.2",
